# semantic-scholar-mcp

./: .gitignore  ACTIVITY.md  SPEC.md  pyproject.toml
src/semantic_scholar_mcp/: bibtex.py  cache.py  client.py  config.py  paper_tracker.py  rate_limiter.py  server.py
src/semantic_scholar_mcp/tools/: __init__.py  _common.py  authors.py  papers.py  recommendations.py
tests/: conftest.py  test_author_consolidation.py  test_bibtex.py  test_cache.py  test_client.py  test_integration.py  test_paper_tracker.py  test_rate_limiter.py  test_server.py
