[project]
name = "semantic-scholar-mcp"
version = "0.1.0"
description = "MCP server for searching and analyzing academic papers via Semantic Scholar API "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0,<3",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
semantic-scholar-mcp = "semantic_scholar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_scholar_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "ty>=0.0.1a6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=semantic_scholar_mcp --cov-report=term-missing"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["semantic_scholar_mcp"]
